--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-paper": "^5.11.7",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
